#fix alignment of pagination in mobile version

--- a/src/app/components/pagination/pagination.component.css
+++ b/src/app/components/pagination/pagination.component.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-content: center;
   list-style: none;
+  padding: 0;
 }
 
 .pagination .pagination-item {
